take out buttons and fix navbar

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="container">
                     <div class="row">
                         <div class="nav_area">
-                            <div class="col-lg-9 col-md-9 col-sm-10 col-xs-12">
+                            <div class="col-lg-9 col-md-9 col-sm-10 col-xs-12" style="position:inherit">
                                 <div class="manu_area">
                                     <div class="navbar" role="navigation">
                                         <div class="navbar-header">
@@ -133,7 +133,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         </div>
                                         <div class="navbar-collapse collapse">
                                             <!-- Nav menu -->
-                                            <ul class="nav navbar-nav mainmenu ">
+                                            <ul class="nav navbar-nav mainmenu" >
                                                 <li class="nav-area-fixed index-nav-fix "><a
                                                         href="index.html">INICIO</a>
                                                 </li>
@@ -165,10 +165,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                            <!-- <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                                 <a href="http://www.turnos365.com/turnos.aspx?con=870" target="_blank"><img
                                         src="img/home-v1/turnos-online.png" alt="" /></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -580,10 +580,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </div>
                         <!-- end of masterslider -->
                         <div class="ms-staff-info" id="staff-info"> </div>
-                        <div class="service_button_all text-center">
+                        <!-- <div class="service_button_all text-center">
                             <a href="https://t.ly/Zknmp" target="_blank" class="btn-info service_button">¡Conocé más
                                 reseñas!</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
