--- a/service-programado.html
+++ b/service-programado.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 										 </div>
 										<div class="navbar-collapse collapse">
 										<!-- Nav menu -->
-											<ul class="nav navbar-nav mainmenu">
+											<ul class="nav navbar-nav mainmenu" style: margin-left:250px">
 												<li class=""><a href="index.html">INICIO</a>
 												</li>
 
@@ -144,9 +144,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+							<!-- <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 									<a href="http://www.turnos365.com/turnos.aspx?con=870 " target="_blank"><img src="img/home-v1/turnos-online.png" alt="" /></a>
-							</div>
+							</div> -->
 							</div>
 						</div>
 					</div>
