added feature federico

--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <a href="tel:1561760576" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
-                                                            CONSULTA</button></a>
+                                                <a href="https://api.whatsapp.com/send?phone=541161760576" target="_blank" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> COTIZÁ POR WHATSAPP</button></a>
 
                                             </ul>
                                         </div>
@@ -277,7 +276,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <!-- porque icon area start -->
             <div class="section_heading text-center">
                 <h2>LLAMANOS AHORA</h2>
-
+                <p>Tenemos turnos inmediatos. Servicio más accesible y de mejor calidad que el concesionario.</p>
 
             </div>
             <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col"
@@ -288,7 +287,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         4932-5951</button></a>
             </div>
             <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
-                <a href="tel:1561760576"><button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora"
+                <a href="https://api.whatsapp.com/send?phone=541161760576" target="_blank"><button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora"
                         style="background-color: #25D366; border-color: #25D366;">
                         <img src="img/tel-mobile.svg" style="height: 30px;height: 30px;
                         padding-right: 9px;
@@ -342,7 +341,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <!-- porque icon area start -->
             <div class="section_heading text-center">
                 <h2>¿POR QUÉ ELEGIR <em>REPRO?</em></h2>
-                <p>Te brindamos calidad y garantía de servicio de mecánica integral para tu auto.</p>
+                <p>Te brindamos un diagnóstico exacto sobre tu auto y te informamos por escrito precio y plazo de entrega.</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="single_icon  text-center">
