--- a/inyeccion-electronica.html
+++ b/inyeccion-electronica.html
@@ -137,8 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 													<li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
 												  </ul>
 												</li>
-												<a href="tel:1561760576" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
-													CONSULTA</button></a>										</ul>
+												<a href="https://api.whatsapp.com/send?phone=541161760576" target="_blank" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> COTIZÁ POR WHATSAPP</button></a>										</ul>
 										</div>
 									</div>
 								</div>
@@ -281,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</div>
 				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
 					<div class="packege_button">
-						<a href="#appointment_area"> <button class="btn-ifno hvr-bounce-to-right btn-packege">Contactanos ahora</button></a>
+						<a href="https://api.whatsapp.com/send?phone=541161760576" target="_blank"> <button class="btn-ifno hvr-bounce-to-right btn-packege">Consultanos por WhatsApp al 011 6176-0576</button></a>
 					</div>
 				</div>
 			</div>
