--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="container">
             <div class="row">
                 <div class="section_heading_white text-center">
-                    <h2>marcas con las que trabajamos</h2>
+                    <h2>trabajamos todas las marcas</h2>
                 </div>
                 <div class="col-md-12">
                     <div id="owl-demo-brand">
