--- a/service-peugeot.html
+++ b/service-peugeot.html
@@ -267,7 +267,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="container">
 			<div class="row">
 				<div class="section_heading_white text-center">
-					<h2>marcas con las que trabajamos</h2>
+					<h2>trabajamos todas las marcas</h2>
 				</div>
 				<div class="col-md-12">
 					<div id="owl-demo-brand" >
